@@ -1,5 +1,8 @@
 EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
+== 03/12/2015 ==
+Akkadius: [eqemu_update.pl V7] Add Option 9) LUA Modules - Download latest LUA Modules (Required for Lua)
+
 == 03/11/2015 ==
 Akkadius: [eqemu_update.pl] Add Option 7) Plugins - Download latest Perl plugins
 Akkadius: [eqemu_update.pl] Add Option 8) Quests - Download latest PEQ quests and stage updates
